--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://eventapp-virid.vercel.app/
 
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
