--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^5.9.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "semver": "^7.7.3",
     "validator": "13.9.0"
   },
   "devDependencies": {
