--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_cnWwKJz2sBBZEynMixAtIUDrw0SQ","orgId":"team_n4W6ELut2CIfFCY36zm4CO6h","projectName":"event_backend"}
+{"projectId":"prj_D38CKDv7Kx3iAdoO3i0qyBohGKAf","orgId":"team_n4W6ELut2CIfFCY36zm4CO6h","projectName":"server"}
